--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,18 @@
 
     <dependencies>
 
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.5.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.19</version>
+        </dependency>
+
         <!--通用配置-->
         <dependency>
             <groupId>org.projectlombok</groupId>
